--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Emma's Wunderland</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 20px;
+      background-color: #f5f5f5;
+    }
+
+    h1 {
+      color: #663399;
+    }
+
+    h2 {
+      color: #8a2be2;
+    }
+
+    p {
+      color: #333;
+    }
+
+    table {
+      width: 50%;
+      margin-top: 20px;
+      border-collapse: collapse;
+      border: 1px solid #ddd;
+    }
+
+    th, td {
+      padding: 12px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+    }
+
+    th {
+      background-color: #8a2be2;
+      color: white;
+    }
+
+    tr:hover {
+      background-color: #f5f5f5;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>Emma's Wunderland</h1>
+  <h2>Wilkommen, scrollen Sie!</h2>
+
+  <p>Ein Einblick in die Welt der wunderbaren Emma und die Geschichte der Rückkehr des Regenbogenfischs. Hier erlebst du nicht nur Geschichten, sondern auch Lacher und Magie! Denn wer hätte gedacht, dass selbst der Regenbogenfisch eine Comeback-Story hat?</p>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Magisches Tier</th>
+        <th>Besonderheit</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Einhorn-Hornein</td>
+        <td>Verleiht Glitzerstaub für gute Laune</td>
+      </tr>
+      <tr>
+        <td>Zauberhase-HaseZauber</td>
+        <td>Verwandelt Karotten in Schokolade</td>
+      </tr>
+      <!-- Add more magical animals as needed -->
+    </tbody>
+  </table>
+
+</body>
+</html>
 
