--- a/index.html
+++ b/index.html
@@ -1,7 +1,88 @@
 <!DOCTYPE html>
 <head>
-  <title>Emma's Wunderland</title>
+  <title>style="color: #8a2be2;"Emma's Wunderland</title>
       
+
+  
+
+</head>
+<body>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 20px;
+      background-color: #663399; /* Hintergrundfarbe ändern */
+      color: #fff; /* Textfarbe ändern */
+    }
+
+    h1 {
+      color: #8a2be2; /* Titelfarbe ändern */
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    h2 {
+      color: #663399; /* Untertitelfarbe ändern */
+      text-align: center;
+    }
+
+    p {
+      color: #fff; /* Textfarbe ändern */
+      text-align: center;
+      margin: 20px;
+    }
+
+    table {
+      width: 50%;
+      margin: 20px auto;
+      border-collapse: collapse;
+      border: 1px solid #ddd;
+    }
+
+    th, td {
+      padding: 12px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+      color: #fff; /* Textfarbe in der Tabelle ändern */
+    }
+
+    th {
+      background-color: #8a2be2;
+      color: white;
+    }
+
+    tr:hover {
+      background-color: #f5f5f5;
+    }
+
+    .story {
+      margin: 30px;
+      color: #fff; /* Textfarbe in der Geschichte ändern */
+    }
+
+    form {
+      max-width: 600px;
+      margin: 30px auto;
+      padding: 20px;
+      background-color: #fff;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      border-radius: 10px; /* Randradius ändern */
+    }
+
+    label {
+      display: block;
+      margin: 10px 0;
+      color: #8a2be2;
+    }
+
+    input, textarea {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      box-sizing: border-box;
+    }
 
     button {
       background-color: #8a2be2;
@@ -16,9 +97,6 @@
       background-color: #663399;
     }
   </style>
-
-</head>
-<body>
   <h1>Emma's Wunderland</h1>
   <h2>Wilkommen, scrollen Sie!</h2>
   
