--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <head>
   <title>style="color: #8a2be2;"Emma's Wunderland</title>
-      
-
-  
-
 </head>
 <body>
   <style>
     body {
       font-family: 'Arial', sans-serif;
       margin: 20px;
-      background-color: #663399; /* Hintergrundfarbe ändern */
+      background-color: ##d5a7f5; /* Hintergrundfarbe ändern */
       color: #fff; /* Textfarbe ändern */
     }
 
