--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>style="color: #8a2be2;"Emma's Wunderland</title>
+ style="color: #8a2be2;" <title>Emma's Wunderland</title>
 </head>
 <body>
   <style>
