--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <style>
     body {
       font-family: 'Arial', sans-serif;
-      margin: 20px;
       background-color: ##d5a7f5; /* Hintergrundfarbe ändern */
-      color: #fff; /* Textfarbe ändern */
+      color: #d5a7f5; /* Textfarbe ändern */
     }
 
     h1 {
