--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
- style="color: #8a2be2;" <title>Emma's Wunderland</title>
+ <title>Emma's Wunderland</title>
 </head>
 <body>
   <style>
