--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
       <!-- Add more magical animals as needed -->
     </tbody>
   </table>
-  <title>Fruit Characteristics</title>
+  <title>Fruits ;)</title>
   <style>
     body {
-      font-family: 'Arial', sans-serif;
+      font-family: 'Beautiful Barbies', sans-serif;
       margin: 20px;
     }
 
