--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
   <style>
     body {
-      font-family: 'Arial', sans-serif;
+      font-family: 'Cavolini', sans-serif;
       background-color: ##d5a7f5; /* Hintergrundfarbe ändern */
       color: #d5a7f5; /* Textfarbe ändern */
     }
