--- a/index.html
+++ b/index.html
@@ -1,195 +1,56 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
- <title>Emma's Wunderland</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Emma's Wunderland</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        header {
+            text-align: center;
+            padding: 10px;
+            background-color: #f7f7f7;
+        }
+        main {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-  <style>
-    body {
-      font-family: 'Cavolini', sans-serif;
-      background-color: ##d5a7f5; /* Hintergrundfarbe ändern */
-      color: #d5a7f5; /* Textfarbe ändern */
-    }
+    <header>
+        <h1>Welcome to Emma's Wunderland</h1>
+        <p>Your magical travel guide to enchanting places</p>
+    </header>
+    
+    <main>
+        <section>
+            <h2>About Emma's Wunderland</h2>
+            <p>Emma's Wunderland is a magical travel guide that takes you on a journey to extraordinary places filled with wonder and excitement. Explore the beauty and charm of the imagined destinations that await you!</p>
+        </section>
 
-    h1 {
-      color: #8a2be2; /* Titelfarbe ändern */
-      text-align: center;
-      margin-top: 50px;
-    }
+        <section>
+            <h2>Featured Places</h2>
+            <p>Discover the following enchanting places:</p>
+            <ul>
+                <li><strong>Crystal Valley:</strong> A sparkling wonderland hidden in the heart of the mountains.</li>
+                <li><strong>Starlight Beach:</strong> A sandy paradise where the stars meet the sea.</li>
+                <li><strong>Mystic Forest:</strong> An ancient forest filled with mystical creatures and magical flora.</li>
+            </ul>
+        </section>
 
-    h2 {
-      color: #663399; /* Untertitelfarbe ändern */
-      text-align: center;
-    }
-
-    p {
-      color: #fff; /* Textfarbe ändern */
-      text-align: center;
-      margin: 20px;
-    }
-
-    table {
-      width: 50%;
-      margin: 20px auto;
-      border-collapse: collapse;
-      border: 1px solid #ddd;
-    }
-
-    th, td {
-      padding: 12px;
-      text-align: left;
-      border-bottom: 1px solid #ddd;
-      color: #fff; /* Textfarbe in der Tabelle ändern */
-    }
-
-    th {
-      background-color: #8a2be2;
-      color: white;
-    }
-
-    tr:hover {
-      background-color: #f5f5f5;
-    }
-
-    .story {
-      margin: 30px;
-      color: #fff; /* Textfarbe in der Geschichte ändern */
-    }
-
-    form {
-      max-width: 600px;
-      margin: 30px auto;
-      padding: 20px;
-      background-color: #fff;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      border-radius: 10px; /* Randradius ändern */
-    }
-
-    label {
-      display: block;
-      margin: 10px 0;
-      color: #8a2be2;
-    }
-
-    input, textarea {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 15px;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-      box-sizing: border-box;
-    }
-
-    button {
-      background-color: #8a2be2;
-      color: white;
-      padding: 10px 15px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #663399;
-    }
-  </style>
-  <h1>Emma's Wunderland</h1>
-  <h2>Wilkommen, scrollen Sie!</h2>
-  
-  <p>Ein Einblick in die Welt der wunderbaren Emma und die Geschichte der Rückkehr des Regenbogenfischs. Hier erlebst du nicht nur Geschichten, sondern auch Lacher und Magie! Denn wer hätte gedacht, dass selbst der Regenbogenfisch eine Comeback-Story hat?</p>
-  
-  <table>
-    <thead>
-      <tr>
-        <th>Magisches Tier</th>
-        <th>Besonderheit</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Einhorn-Hornein</td>
-        <td>Verleiht Glitzerstaub für gute Laune</td>
-      </tr>
-      <tr>
-        <td>Zauberhase-HaseZauber</td>
-        <td>Verwandelt Karotten in Schokolade</td>
-      </tr>
-      <!-- Add more magical animals as needed -->
-    </tbody>
-  </table>
-  <title>Fruits ;)</title>
-  <style>
-    body {
-      font-family: 'Beautiful Barbies', sans-serif;
-      margin: 20px;
-    }
-
-    h2 {
-      color: #663399;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    li {
-      background-color: #f5f5f5;
-      margin: 5px 0;
-      padding: 10px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    li:hover {
-      background-color: #e0e0e0;
-    }
-
-    .details {
-      display: none;
-    }
-  </style>
-</head>
-<body>
-
-  <h2>Fruit Characteristics</h2>
-  <ul>
-    <li onclick="toggleDetails('apple')">Apple</li>
-    <div id="apple" class="details">
-      <p>Color: Red or Green</p>
-      <p>Taste: Sweet and Crisp</p>
-      <p>Uses: Snacking, Baking</p>
-    </div>
-
-    <li onclick="toggleDetails('banana')">Banana</li>
-    <div id="banana" class="details">
-      <p>Color: Yellow</p>
-      <p>Taste: Sweet and Creamy</p>
-      <p>Uses: Snacking, Smoothies</p>
-    </div>
-
-    <!-- Add more fruits as needed -->
-  </ul>
-
-  <script>
-    function toggleDetails(fruit) {
-      var details = document.getElementById(fruit);
-      details.style.display = details.style.display === 'none' ? 'block' : 'none';
-    }
-  </script>
-
-  <form>
-    <h2>Kontaktiere uns</h2>
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required>
-
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
-
-    <label for="message">Nachricht:</label>
-    <textarea id="message" name="message" rows="4" required></textarea>
-
-    <button type="submit">Abschicken</button>
-  </form>
+        <section>
+            <h2>Interactive Maps</h2>
+            <p>Explore the maps of Emma's Wunderland and plan your magical journey!</p>
+            <!-- Placeholder for maps, you can embed your maps here -->
+            <img src="placeholder_map1.jpg" alt="Map 1">
+            <img src="placeholder_map2.jpg" alt="Map 2">
+        </section>
+    </main>
 </body>
 </html>
 
+ 
