--- a/index.html
+++ b/index.html
@@ -36,19 +36,12 @@
             <h2>Featured Places</h2>
             <p>Discover the following enchanting places:</p>
             <ul>
-                <li><strong>Crystal Valley:</strong> A sparkling wonderland hidden in the heart of the mountains.</li>
+                <li><weak>Crystal Valley:</strong> A sparkling wonderland hidden in the heart of the mountains.</li>
                 <li><strong>Starlight Beach:</strong> A sandy paradise where the stars meet the sea.</li>
                 <li><strong>Mystic Forest:</strong> An ancient forest filled with mystical creatures and magical flora.</li>
             </ul>
         </section>
 
-        <section>
-            <h2>Interactive Maps</h2>
-            <p>Explore the maps of Emma's Wunderland and plan your magical journey!</p>
-            <!-- Placeholder for maps, you can embed your maps here -->
-            <img src="placeholder_map1.jpg" alt="Map 1">
-            <img src="placeholder_map2.jpg" alt="Map 2">
-        </section>
     </main>
 </body>
 </html>
