--- a/index.html
+++ b/index.html
@@ -1,49 +1,11 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emma's Wunderland</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        header {
-            text-align: center;
-            padding: 10px;
-            background-color: #f7f7f7;
-        }
-        main {
-            margin-top: 20px;
-        }
-    </style>
+ <link rel="icon" href="favicon.ico" type="image/x-icon">
+<style> body {background-color: #ffe6ff;} <style>
+<title>Emma's Blumiges Wunderland</title>
 </head>
 <body>
-    <header>
-        <h1>Welcome to Emma's Wunderland</h1>
-        <p>Your magical travel guide to enchanting places</p>
-    </header>
-    
-    <main>
-        <section>
-            <h2>About Emma's Wunderland</h2>
-            <p>Emma's Wunderland is a magical travel guide that takes you on a journey to extraordinary places filled with wonder and excitement. Explore the beauty and charm of the imagined destinations that await you!</p>
-        </section>
 
-        <section>
-            <h2>Featured Places</h2>
-            <p>Discover the following enchanting places:</p>
-            <ul>
-                <li><weak>Crystal Valley:</strong> A sparkling wonderland hidden in the heart of the mountains.</li>
-                <li><strong>Starlight Beach:</strong> A sandy paradise where the stars meet the sea.</li>
-                <li><strong>Mystic Forest:</strong> An ancient forest filled with mystical creatures and magical flora.</li>
-            </ul>
-        </section>
-
-    </main>
 </body>
 </html>
-
- 
