--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
- <link rel="icon" href="favicon.ico" type="image/x-icon">
-<style> body {background-color: #ffe6ff;} <style>
-<title>Emma's Blumiges Wunderland</title>
+    <link rel="icon" href="https://th.bing.com/th/id/OIP.6c6kvIsy9H2fV4ayf5RVJgHaIY?w=194&h=220&c=7&r=0&o=5&dpr=1.1&pid=1.7" type="image/jpeg">
+    <style>
+        body {
+            background-color: #ffe6ff;
+            font-family: Arial, sans-serif;
+        }
+
+        header {
+            background-color: #9900cc; /* Choose a suitable color for the header background */
+            color: #ffffff; /* Choose a suitable text color for the header */
+            padding: 1em;
+            text-align: center;
+        }
+    </style>
+    <title>Emmas Blumiges Wunderland</title>
 </head>
 <body>
-
+    <header>
+        <h1>Emmas Blumiges Wunderland</h1>
+    </header>
 </body>
 </html>
