--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             padding: 1em;
             text-align: center;
         }
+        <img src="https://th.bing.com/th/id/OIP.3P62cGTBrcG96quV4RZZfAAAAA?w=158&h=180&c=7&r=0&o=5&dpr=1.1&pid=1.7" alt="Blumiges Bild">
     </style>
     <title>Emmas Blumiges Wunderland</title>
 </head>
