--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     </header>
     <center>
     <img src="https://th.bing.com/th/id/OIP.3P62cGTBrcG96quV4RZZfAAAAA?w=158&h=180&c=7&r=0&o=5&dpr=1.1&pid=1.7" alt="Blumiges Bild"> 
-    <h2> Der Hasezabuer fäult im Walde. </h2>
+    <h2> Der Hasezauber fäult im Walde. </h2>
     </body>
 </html>
