--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
  <!DOCTYPE html>
 <html lang="de">
 <head>
+<audio autoplay controls>
+  <source src="https://www.101soundboards.com/sounds/244149-best-party-ive-ever-had" type="audio/mp3">
+  Your browser does not support the audio tag.
+</audio>
 
     </style>
     <link rel="icon" href="https://th.bing.com/th/id/OIP.6c6kvIsy9H2fV4ayf5RVJgHaIY?w=194&h=220&c=7&r=0&o=5&dpr=1.1&pid=1.7" type="image/jpeg">
