--- a/index.html
+++ b/index.html
@@ -1,20 +1,7 @@
  <!DOCTYPE html>
 <html lang="de">
 <head>
-<audio id="myAudio" controls>
-  <source src="https://www.101soundboards.com/sounds/244149-best-party-ive-ever-had" type="audio/mp3">
-  Your browser does not support the audio tag.
-</audio>
-
-<button onclick="playAudio()">Play Audio</button>
-
-<script>
-  function playAudio() {
-    var audio = document.getElementById("myAudio");
-    audio.play();
-  }
-</script>
-
+<button onclick="Hallo"
 
     </style>
     <link rel="icon" href="https://th.bing.com/th/id/OIP.6c6kvIsy9H2fV4ayf5RVJgHaIY?w=194&h=220&c=7&r=0&o=5&dpr=1.1&pid=1.7" type="image/jpeg">
@@ -27,7 +14,6 @@
             background-color: #ff99ff; 
             color: #ffffff; 
             text-align: center; }   
-       
     </style>
     
     <title>Emmas Blumiges Wunderland</title>
@@ -38,7 +24,7 @@
     </header>
     <center>
     <img src="https://th.bing.com/th/id/OIP.3P62cGTBrcG96quV4RZZfAAAAA?w=158&h=180&c=7&r=0&o=5&dpr=1.1&pid=1.7" alt="Blumiges Bild"> 
-    <h2> Der Hasezauber fäult im Walde. </h2>
+    <h2> Der Hasezauber fäulet im blumigen Walde. </h2>
      <img scr= "https://www.preis.de/index.htm?AKT=sem&search=my+little+pony+fluttershy&af=1&d=2&w=14&y=2014&preis_aff_id=0000-bing_adwords-1111&impid=47&srcid=8&proex=amzde,ebyde&br=1&utm_source=bing&utm_medium=cpc&utm_campaign=331236842&adgroup_id=1166582018446491&utm_term=my%20little%20pony%20fluttershy&mtype=e&pde_id=136004520&msclkid=34f0d2aa672a1e179837b71b7e221d04&utm_content=my%20little%20pony%20fluttershy"
     </body>
 </html>
