--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
  <!DOCTYPE html>
 <html lang="de">
 <head>
-<button onclick="Hallo"
-
-    </style>
-    <link rel="icon" href="https://th.bing.com/th/id/OIP.6c6kvIsy9H2fV4ayf5RVJgHaIY?w=194&h=220&c=7&r=0&o=5&dpr=1.1&pid=1.7" type="image/jpeg">
+    <link rel="icon" href="https://th.bing.com/th/id/OIP.6c6kvIsy9H2fV4ayf5RVJgHaIY?w=194&h=220&c=7&r=0&o=5&dpr=1.1&pid=1.7" type="image">
     <style>
         body {
             background-color: #ffe6ff;
