--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             text-align: center; }   
     </style>
     
-    <title>Emmas Blumiges Wunderland</title>
+    <title>EF</title>
 </head>
 <body>
     <header>
