--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <center>
     <img src="https://th.bing.com/th/id/OIP.3P62cGTBrcG96quV4RZZfAAAAA?w=158&h=180&c=7&r=0&o=5&dpr=1.1&pid=1.7" alt="Blumiges Bild"> 
     <h2> Der Hasezauber fäulet im blumigen Walde. </h2>
-     <h3> Es war einmal ein engelhafter Bengel namens Stängel. Er wohnte im Himmel. </h3>
+     <h3> Ein magischer Guide zu Emma's Blumiges Wunderland! </h3>
     </body>
 </html>
